--- a/appMy/templates/base.html
+++ b/appMy/templates/base.html
@@ -17,7 +17,7 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
    <!-- MDB -->
    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css" rel="stylesheet" />
-   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+   <link rel="stylesheet" href="{% static 'css/style.css' %}">
       
    {% block header %}
     
@@ -40,7 +40,11 @@
       {% endfor %}
    </div>
 
+
+{% block nonheader %}
 {% include 'partials/_navbar.html' %}
+{% endblock nonheader %}
+   
 
    
 
