--- a/appMy/templates/user/login.html
+++ b/appMy/templates/user/login.html
@@ -36,19 +36,19 @@
 
     @media screen and (max-width: 700px) {
         .hero-image {
-            background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1)), url('img/arkaplan.jpg' );
+            background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1)), url('../../static/img/arkaplan.jpg' );
         }
     }
 </style>
 {% endblock header %}
     
 
-{% block body %}
+{% block nonheader %}
 <div class="hero-image">
     <!-- navbar -->
     <nav class="navbar">
         <div class="container">
-            <a href="/" class="navbar-brand"><img src="{% static '{% static 'img/netflix_logo.png' %}' %}" alt=""></a>
+            <a href="/" class="navbar-brand"><img src="{% static 'img/netflix_logo.png' %}" alt=""></a>
         </div>
     </nav>
 
@@ -81,7 +81,7 @@
     </div>
 
 </div>
-{% endblock body %}
+{% endblock nonheader %}
     
 
 
