--- a/appMy/templates/user/register.html
+++ b/appMy/templates/user/register.html
@@ -63,10 +63,10 @@
             <h2>Kaydol</h2>
 
             <div class="mb-3">
-                <input required type="text" name="fname" class="form-control form-control-lg my-2" placeholder="Ad">
-                <input required type="text" name="lname" class="form-control form-control-lg my-2" placeholder="Soyad">
-                <input required type="text" name="email" class="form-control form-control-lg my-2" placeholder="Email">
-                <input required type="text" name="username" class="form-control form-control-lg my-2" placeholder="Kullanıcı Adı">
+                <input required value="{{fname}}" type="text" name="fname" class="form-control form-control-lg my-2" placeholder="Ad">
+                <input required value="{{lname}}" type="text" name="lname" class="form-control form-control-lg my-2" placeholder="Soyad">
+                <input required value="{{email}}" type="text" name="email" class="form-control form-control-lg my-2" placeholder="Email">
+                <input required value="{{username}}" type="text" name="username" class="form-control form-control-lg my-2" placeholder="Kullanıcı Adı">
                 <input required type="password" name="password1" class="form-control form-control-lg my-2" placeholder="Şifre">
                 <input required type="password" name="password2" class="form-control form-control-lg my-2" placeholder="Tekrar Şifre">
             </div>
