--- a/appMy/templates/profile.html
+++ b/appMy/templates/profile.html
@@ -36,9 +36,43 @@
     </div>
 </nav>
 
-<!-- profil seçimi -->
-<div class="container">
-    <div class="row w-75 m-auto bg-black bg-opacity-25">
+
+{% if is_delete_title %}
+<!-- Porfile Delete Modal -->
+  <div class="modal" id="profile_delete_title" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Daha önceden bu isimde bir profil sildiniz eski profilinizi getirmek istermisiniz? </h5>
+            <button type="button" class="btn-close" onclick="Kapat()" data-mdb-ripple-init data-mdb-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-footer">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" name="title" value="{{ title }}">
+                <input type="hidden" name="image" value="{{ image }}">
+                <button type="submit" name="submit" value="newProfileCreate" class="btn btn-secondary">Hayır</button>
+                <button type="submit" name="submit" value="oldProfileCreate" class="btn btn-primary">Evet</button>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+
+<script>
+    let pdt = document.getElementById("profile_delete_title")
+   pdt.style.display ="block";
+    const Kapat = ()=>{
+        pdt.style.display="none";
+    }
+  </script>
+  <!-- Porfile Delete Modal -->
+{% endif %}
+
+
+  <!-- profil seçimi -->
+  <div class="container">
+      <div class="row w-75 m-auto bg-black bg-opacity-25">
         <h1 class="text-center text-light">Kimler İzliyor?</h1>
 
         
