--- a/appMy/templates/profile.html
+++ b/appMy/templates/profile.html
@@ -86,7 +86,7 @@
                             <a href="{% url 'profileDelete' i.id %}"><i class="text-black btn btn-light bi bi-x-square"></i></a>
                         </div>
                             
-                            <a href=""><img src="{{ i.image.url }}" class="card-img-top w-100" style="height: 186px; object-fit: cover;" alt=""></a>
+                            <a href="{% url 'profileLogin' i.id %}"><img src="{{ i.image.url }}" class="card-img-top w-100" style="height: 186px; object-fit: cover;" alt=""></a>
                                 
                         <div>
                             <h5 class="card-title text-center text-secondary">{{ i.title }}</h5>
