--- a/appMy/templates/partials/_navbar.html
+++ b/appMy/templates/partials/_navbar.html
@@ -13,16 +13,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="">Anasayfa</a>
+                        <a class="nav-link" aria-current="page" href="/netflix">Anasayfa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Diziler</a>
+                        <a class="nav-link" href="/netflix/diziler">Diziler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Filmler</a>
+                        <a class="nav-link" href="/netflix/filmer">Filmler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Yeni ve popüler</a>
+                        <a class="nav-link" href="/netflix/yenivepopuler">Yeni ve popüler</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Listem</a>
